cabal-version:      3.0
name:               double-hash-map
version:            0.1.0.0
synopsis:           HashMap with double hashing

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Advanced Alpaka
maintainer:         advancedAlpaka@protonmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        Data.HashMap
        Data.HashMap.Internal
        Data.HashMap.Internal.Base
        Data.HashMap.Internal.Class
        Data.HashMap.Internal.Instance

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0,
        hashable,
        vector
        
    hs-source-dirs:   src
    default-language: Haskell2010

executable double-hash-map
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        double-hash-map

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite double-hash-map-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
