cabal-version:      3.6
name:               double-hash-map
version:            0.1.0.0
synopsis:           HashMap with double hashing

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Advanced Alpaka
maintainer:         advancedAlpaka@protonmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

-- double-hash-map
library
    exposed-modules:  
        Data.HashMap,
        Data.HashMap.Internal.Debug,
        Data.Digest.Murmur,
        
    -- Modules included in this library but not exported.
    other-modules:
        Data.HashMap.Internal.Array,
        Data.HashMap.Internal.Base,
        Data.HashMap.Internal.Basic,
        Data.HashMap.Internal.Class,
        Data.HashMap.Internal.Instance,

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16,
        hashable,
        primitive,
        deepseq,
        random,
        text ^>=2.0.2,
        
    hs-source-dirs:   src
    default-language: Haskell2010

executable double-hash-map-example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16,
        double-hash-map,
        aeson,
        vector,
        mwc-random,
        hashable,
        deepseq,
        primitive,

    ghc-options:
        -O2
        -threaded
        -fprof-auto
        "-with-rtsopts=-N -p -s -hc -i0.1"

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite double-hash-map-test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    default-language: Haskell2010
    other-modules:
        Util.Key
    build-depends:    
        base ^>=4.16,
        double-hash-map,
        hashable,
        QuickCheck,
        tasty,
        tasty-quickcheck,
        containers

benchmark bench-hash-map
    type:             exitcode-stdio-1.0
    hs-source-dirs:   benchmark
    main-is:          Benchmark.hs
    default-language: Haskell2010
    build-depends: 
        base,
        double-hash-map,
        aeson,
        tasty, 
        tasty-bench,
        bytestring,
        mwc-random,
        containers,
        unordered-containers,
        hashable,
        vector,
        vector-algorithms,
        text,
        deepseq
--        murmurhash3
    ghc-options: 
        -Wall 
        -O2 
        -rtsopts 
        -with-rtsopts=-A32m
--    mixins:
--        murmurhash3 (Data.Digest.Murmur as MH3)